Bugfix: overflow not set on profiles alphabet div

--- a/less/microcosm-pagination.less
+++ b/less/microcosm-pagination.less
@@ -1,3 +1,6 @@
+.pagination-wrapper{
+  overflow: auto;
+}
 .pagination{
   display:none;
   padding:0;
